// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Using fe should merge class names 1`] = `
Object {
  "css": ".a {
    color: red
}

.b:hover {
    color: blue
}",
  "html": "<div class=\\"Component-button Component a b\\">Hello</div>",
}
`;

exports[`Using fe should render inline style as CSS 1`] = `
Object {
  "css": ".a {
    color: red
}

.b:hover {
    color: blue
}",
  "html": "<div class=\\"a b\\">Hello</div>",
}
`;
